--- a/mkidgen3/config/logging.yaml
+++ b/mkidgen3/config/logging.yaml
@@ -1,4 +1,13 @@
 loggers:
+  feedlinereadoutserver:
+    werkzeug: ERROR
+    pynq: INFO
+    mkidgen3: DEBUG
+    "":
+      handlers: [ default ]
+      level: WARNING
+      propagate: False
+    __main__: DEBUG
   gen3-flask:
     werkzeug: ERROR
     pynq: INFO
@@ -6,11 +15,11 @@ loggers:
     "":
       handlers: [ default ]
       level: WARNING
-      propagate': False
+      propagate: False
     __main__:
       handlers: [ default ]
       level: DEBUG
-      propagate': False
+      propagate: False
 
 version: 1
 disable_existing_loggers: False
@@ -24,5 +33,5 @@ formatters:
   brieffmt:
     format: '%(message)s'
   default:
-    format: '%(asctime)s %(name)s:%(levelname)-8s %(message)s'
-    datefmt: '%Y-%m-%d %H:%M:%S'
+    format: '%(asctime)s %(name)s:%(levelname)-8s (%(module)s:%(threadName)s) %(message)s'
+    datefmt: '%H:%M:%S'
