Progress on postage stamp captures. Some indication we might want to speed up phasematch programming!

--- a/mkidgen3/config/logging.yaml
+++ b/mkidgen3/config/logging.yaml
@@ -3,6 +3,7 @@ loggers:
     pynq: INFO
     mkidgen3: DEBUG
     mkidgen3.drivers.ifboard.io: INFO
+    mkidgen3.drivers.axififo: INFO
     "":
       handlers: [ default ]
       level: WARNING
