continue working on photon capture requests

--- a/mkidgen3/config/logging.yaml
+++ b/mkidgen3/config/logging.yaml
@@ -5,6 +5,7 @@ loggers:
     mkidgen3.drivers.ifboard.io: INFO
     mkidgen3.drivers.axififo: INFO
     mkidgen3.server.captures.statusio: INFO
+    mkidgen3.drivers.phasematch: INFO
     "":
       handlers: [ default ]
       level: WARNING
