logging ms and update/test the ProcessProxy. Faster, but maybe just coincidentally. Need to investigate the FRS main thread.

--- a/mkidgen3/config/logging.yaml
+++ b/mkidgen3/config/logging.yaml
@@ -32,5 +32,5 @@ formatters:
   brieffmt:
     format: '%(message)s'
   default:
-    format: '%(asctime)s %(name)s:%(levelname)-8s (%(threadName)s) %(message)s'
+    format: '%(asctime)s.%(msecs)03d %(name)s:%(levelname)-8s (%(threadName)s) %(message)s'
     datefmt: '%H:%M:%S'
